k8s/grafana/deployment.yaml
# Copyright 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana
    provider: jarvis
  name: grafana
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        provider: jarvis
    spec:
      containers:
      - image: zeiot/rpi-grafana:vv5.1.3.arm64
        imagePullPolicy: Always
        name: grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 500m
            memory: 128Mi
        volumeMounts:
          - name: grafana-config
            mountPath: "/etc/grafana"
          - name: grafana-data
            mountPath: "/var/lib/grafana"
      volumes:
        # - name: grafana-config
        #   persistentVolumeClaim:
        #     claimName: grafana-config
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: grafana-config
          configMap:
            name: grafana
            items:
              - key: grafana.ini
                path: grafana.ini
