k8s/grafana/grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    provider: jarvis
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: zeiot/rpi-grafana:v4.6.0
        imagePullPolicy: Always
        name: grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 500m
            memory: 128Mi
        volumeMounts:
          - name: nfs-pvc-config
            mountPath: "/etc/grafana"
          - name: nfs-pvc-data
            mountPath: "/var/lib/grafana"
        volumes:
          - name: nfs-pvc-config
            persistentVolumeClaim:
              claimName: grafana-pvc-claim-config
          - name: nfs-pvc-data
            persistentVolumeClaim:
              claimName: grafana-pvc-claim-data
      #   volumeMounts:
      #   - mountPath: /etc/grafana
      #     name: config
      #   - mountPath: /var/lib/grafana
      #     name: data
      # volumes:
      # - hostPath:
      #     path: /srv/nfs/grafana/conf
      #   name: config
      # - hostPath:
      #     path: /srv/nfs/grafana/data
      #   name: data
