k8s/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    provider: jarvis
  name: grafana
spec:
  ports:
  - name: grafana
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
